# finalDB

./: .gitignore  README.md  index.html  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  print.rs  staff.rs
src-tauri/src/database/: mod.rs  operations.rs  schema.rs
src-tauri/src/utils/: mod.rs
src/components/dialogs/: EditStaffDialog.tsx  ViewStaffDialog.tsx  index.ts
src/components/forms/: DatePicker.tsx  ImageUpload.tsx  NICInput.tsx
src/components/layout/: Header.tsx  Layout.tsx
src/components/staff/: ImageCropper.tsx  PrintPreview.tsx  ProfessionalPrintPreview.tsx  StaffForm.tsx  StaffList.tsx  StaffSearch.tsx  StaffView.tsx  index.ts
src/components/ui/: button.tsx  calendar.tsx  checkbox.tsx  dialog.tsx  input.tsx  select.tsx  tabs.tsx
src/hooks/: usePrint.ts  useStaff.ts  useStaffMutations.ts
src/lib/: constants.ts  database.ts  nicConverter.ts  printTemplates.ts  utils.ts
src/pages/: AddStaff.tsx  Dashboard.tsx  SearchStaff.tsx  ViewStaff.tsx
src/styles/: components.css  globals.css
src/types/: staff.ts
