[package]
name = "forest-office-staff-app"
version = "1.0.0"
description = "Staff Management System for Divisional Forest Office - Vavuniya Sri Lanka"
authors = ["Forest Office"]
license = ""
repository = ""
default-run = "forest-office-staff-app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "window-show", "window-hide", "window-maximize", "window-minimize", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-close", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "fs-create-dir", "fs-exists", "path-all", "shell-open"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
anyhow = "1.0"
lopdf = "0.32"
genpdf = "0.2"
directories = "5.0"