[package]
name = "forest-office-staff-app"
version = "1.0.0"
description = "Staff Management System for Divisional Forest Office - Vavuniya, Sri Lanka"
authors = ["Forest Office"]
edition = "2021"
license = ""
repository = ""
default-run = "forest-office-staff-app"
[build-dependencies]
tauri-build = { version = "1.5.8", features = [] }
[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tauri Core
tauri = { version = "1.5.8", features = [
    "fs-write-file",
    "fs-create-dir",
    "fs-read-file",
    "fs-exists",
    "path-all",
    "protocol-all",
    "dialog-open",
    "dialog-save",
    "shell-open",
    "window-close",
    "window-show",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-unmaximize",
    "window-unminimize",
    "window-start-dragging",
    "custom-protocol"
] }
# Database
rusqlite = { version = "0.30.0", features = ["bundled"] }
# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
anyhow = "1.0"
directories = "5.0"
