[package]
name = "forest-office-staff-app"
version = "1.0.0"
description = "Staff Management System for Divisional Forest Office - Vavuniya, Sri Lanka"
authors = ["Forest Office"]
edition = "2021"
license = ""
repository = ""
default-run = "forest-office-staff-app"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tauri Core
tauri = { version = "2.8.5", features = [] }
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-shell = "2.3.0"
# Database
rusqlite = { version = "0.30.0", features = ["bundled"] }
# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
anyhow = "1.0"
directories = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
